<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/subData4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="8dp"
    tools:context=".FriFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/friFirst"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="250dp"
                android:layout_marginRight="250dp"
                android:layout_marginBottom="-5dp"
                android:backgroundTint="#D1E8FF"
                android:text="1"
                android:textColor="#000000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/friData1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="-250dp"
                android:layout_marginLeft="-250dp"
                android:layout_marginTop="-5dp"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:backgroundTint="#ffffff"
                android:text="@string/fri_data1"
                android:textColor="#A9A9A9"
                android:textSize="18sp"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/friSecond"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="250dp"
                android:layout_marginRight="250dp"
                android:layout_marginBottom="-5dp"
                android:backgroundTint="#D1E8FF"
                android:text="2"
                android:textColor="#000000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/friData2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="-250dp"
                android:layout_marginLeft="-250dp"
                android:layout_marginTop="-5dp"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:backgroundTint="#ffffff"
                android:text="@string/none"
                android:textColor="#A9A9A9"
                android:textSize="18sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/friThird"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="250dp"
                android:layout_marginRight="250dp"
                android:layout_marginBottom="-5dp"
                android:backgroundTint="#D1E8FF"
                android:text="3"
                android:textColor="#000000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/friData3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="-250dp"
                android:layout_marginLeft="-250dp"
                android:layout_marginTop="-5dp"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:backgroundTint="#ffffff"
                android:text="@string/fri_data3"
                android:textColor="#A9A9A9"
                android:textSize="18sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/friFourth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="250dp"
                android:layout_marginRight="250dp"
                android:layout_marginBottom="-5dp"
                android:backgroundTint="#D1E8FF"
                android:text="4"
                android:textColor="#000000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/friData4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="-250dp"
                android:layout_marginLeft="-250dp"
                android:layout_marginTop="-5dp"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:backgroundTint="#ffffff"
                android:text="@string/fri_data4"
                android:textColor="#A9A9A9"
                android:textSize="18sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/friFifth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="250dp"
                android:layout_marginRight="250dp"
                android:layout_marginBottom="-5dp"
                android:backgroundTint="#D1E8FF"
                android:text="5"
                android:textColor="#000000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/friData5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="-250dp"
                android:layout_marginLeft="-250dp"
                android:layout_marginTop="-5dp"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:backgroundTint="#ffffff"
                android:text="@string/none"
                android:textColor="#A9A9A9"
                android:textSize="18sp"/>
        </TableRow>
    </TableLayout>
</LinearLayout>