<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/subData4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="8dp"
    tools:context=".MonFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/monFirst"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="250dp"
                android:layout_marginRight="250dp"
                android:layout_marginBottom="-5dp"
                android:backgroundTint="#D1E8FF"
                android:text="1"
                android:textColor="#000000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/monData1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="-250dp"
                android:layout_marginLeft="-250dp"
                android:layout_marginTop="-5dp"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:backgroundTint="#ffffff"
                android:text="@string/mon_data1"
                android:textColor="#A9A9A9"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/monSecond"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="250dp"
                android:layout_marginRight="250dp"
                android:layout_marginBottom="-5dp"
                android:backgroundTint="#D1E8FF"
                android:text="2"
                android:textColor="#000000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/monData2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="-250dp"
                android:layout_marginLeft="-250dp"
                android:layout_marginTop="-5dp"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:backgroundTint="#ffffff"
                android:text="@string/mon_data2"
                android:textColor="#A9A9A9"
                android:textSize="18sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/monThird"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="250dp"
                android:layout_marginRight="250dp"
                android:layout_marginBottom="-5dp"
                android:backgroundTint="#D1E8FF"
                android:text="3"
                android:textColor="#000000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/monData3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="-250dp"
                android:layout_marginLeft="-250dp"
                android:layout_marginTop="-5dp"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:backgroundTint="#ffffff"
                android:text="@string/none"
                android:textColor="#A9A9A9"
                android:textSize="18sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/monFourth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="250dp"
                android:layout_marginRight="250dp"
                android:layout_marginBottom="-5dp"
                android:backgroundTint="#D1E8FF"
                android:text="4"
                android:textColor="#000000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/monData4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="-250dp"
                android:layout_marginLeft="-250dp"
                android:layout_marginTop="-5dp"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:backgroundTint="#ffffff"
                android:text="@string/none"
                android:textColor="#A9A9A9"
                android:textSize="18sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/monFifth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="250dp"
                android:layout_marginRight="250dp"
                android:layout_marginBottom="-5dp"
                android:backgroundTint="#D1E8FF"
                android:text="5"
                android:textColor="#000000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/monData5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="-250dp"
                android:layout_marginLeft="-250dp"
                android:layout_marginTop="-5dp"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:backgroundTint="#ffffff"
                android:text="@string/none"
                android:textColor="#A9A9A9"
                android:textSize="18sp"/>
        </TableRow>
    </TableLayout>
</LinearLayout>